--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-django >= 1.7
-djangorestframework >= 2.4.3
-gunicorn >= 19.1.1
-django-post-office >= 1.1.1
-django-cors-headers >= 0.13
-django-celery-with-redis
-django-grappelli
-django-sslserver
-django-model-utils
-psycopg2
+django == 1.7
+djangorestframework == 3.0
+gunicorn == 19.1.1
+django-post-office == 1.1.1
+django-cors-headers == 0.13
+django-celery-with-redis == 3.0
+django-grappelli == 2.6.3
+django-sslserver == 0.14
+django-model-utils == 2.2
+psycopg2 == 2.5.4
